--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 </head>
 
 <body>
-    <h1>Hello this is page for Chat Application</h1>
     <!--Start of Tawk.to Script-->
     <script type="text/javascript">
         var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
@@ -21,6 +20,9 @@
             s1.setAttribute('crossorigin', '*');
             s0.parentNode.insertBefore(s1, s0);
         })();
+        Tawk_API.onLoad = function () {
+            Tawk_API.showWidget();
+        };
     </script>
     <!--End of Tawk.to Script-->
 </body>
