--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <h1>Updated 1</h1>
     <!--Start of Tawk.to Script-->
     <script type="text/javascript">
         var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
@@ -22,6 +23,7 @@
         })();
         Tawk_API.onLoad = function () {
             Tawk_API.showWidget();
+            console.log('onLoad called')
         };
     </script>
     <!--End of Tawk.to Script-->
