--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1>Updated 1</h1>
+    <h1>Updated 2</h1>
     <!--Start of Tawk.to Script-->
     <script type="text/javascript">
         var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
@@ -22,8 +22,15 @@
             s0.parentNode.insertBefore(s1, s0);
         })();
         Tawk_API.onLoad = function () {
-            Tawk_API.showWidget();
-            console.log('onLoad called')
+            TTawk_API.toggleVisibility();
+            // console.log('Tawk_API.isChatHidden()',Tawk_API.isChatHidden())
+            // if(Tawk_API.isChatHidden())
+            //     {
+            //     Tawk_API.showWidget();
+            //     }
+            // Tawk_API.popup();
+            // Tawk_API.showWidget();
+            // console.log('onLoad called')
         };
     </script>
     <!--End of Tawk.to Script-->
