--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1>Updated 2</h1>
+    <h1>Updated 3</h1>
     <!--Start of Tawk.to Script-->
     <script type="text/javascript">
         var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
@@ -22,7 +22,7 @@
             s0.parentNode.insertBefore(s1, s0);
         })();
         Tawk_API.onLoad = function () {
-            TTawk_API.toggleVisibility();
+            Tawk_API.toggleVisibility();
             // console.log('Tawk_API.isChatHidden()',Tawk_API.isChatHidden())
             // if(Tawk_API.isChatHidden())
             //     {
