--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 </head>
 
 <body>
-    <h1>Updated 3</h1>
     <!--Start of Tawk.to Script-->
     <script type="text/javascript">
         var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
@@ -22,15 +21,7 @@
             s0.parentNode.insertBefore(s1, s0);
         })();
         Tawk_API.onLoad = function () {
-            Tawk_API.toggleVisibility();
-            // console.log('Tawk_API.isChatHidden()',Tawk_API.isChatHidden())
-            // if(Tawk_API.isChatHidden())
-            //     {
-            //     Tawk_API.showWidget();
-            //     }
-            // Tawk_API.popup();
-            // Tawk_API.showWidget();
-            // console.log('onLoad called')
+            Tawk_API.maximize()
         };
     </script>
     <!--End of Tawk.to Script-->
