--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
         Tawk_API.onLoad = function () {
             Tawk_API.maximize()
         };
+        Tawk_API.onChatMinimized = function () {
+            Tawk_API.maximize()
+        };
+
     </script>
     <!--End of Tawk.to Script-->
 </body>
