--- a/test.html
+++ b/test.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -36,31 +35,8 @@
             }
         </style>
 </head>
-
 <body>
-    <h1>Update 1</h1>
+    <h1>Test HTML</h1>
     <div class="spinner loading" id="spinner"></div>
-    <!--Start of Tawk.to Script-->
-    <script type="text/javascript">
-        var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
-        (function () {
-            var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
-            s1.async = true;
-            s1.src = 'https://embed.tawk.to/5d1db47c22d70e36c2a4151b/default';
-            s1.charset = 'UTF-8';
-            s1.setAttribute('crossorigin', '*');
-            s0.parentNode.insertBefore(s1, s0);
-        })();
-        Tawk_API.onLoad = function () {
-            document.getElementById('spinner').remove()
-            Tawk_API.maximize()
-        };
-        Tawk_API.onChatMinimized = function () {
-            window.location = "https://sharangoharkhan.github.io/food-delivery-chat/test.html";
-            // Tawk_API.maximize()
-        };
-    </script>
-    <!--End of Tawk.to Script-->
 </body>
-
 </html>
