--- a/index.html
+++ b/index.html
@@ -38,11 +38,12 @@
 </head>
 
 <body>
-    <h1>Update 1</h1>
+    <h1>Update 2</h1>
     <div class="spinner loading" id="spinner"></div>
     <!--Start of Tawk.to Script-->
     <script type="text/javascript">
         var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
+        document.getElementById('minimizeChatMinifiedBtn').addEventListener('click',() => window.location = "https://sharangoharkhan.github.io/food-delivery-chat/test.html")
         (function () {
             var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
             s1.async = true;
@@ -56,8 +57,7 @@
             Tawk_API.maximize()
         };
         Tawk_API.onChatMinimized = function () {
-            window.location = "https://sharangoharkhan.github.io/food-delivery-chat/test.html";
-            // Tawk_API.maximize()
+            Tawk_API.maximize()
         };
     </script>
     <!--End of Tawk.to Script-->
