--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </head>
 
 <body>
-    <h1>Update 9</h1>
+    <h1>Update 10</h1>
     <div class="spinner loading" id="spinner"></div>
     <!--Start of Tawk.to Script-->
     <script type="text/javascript">
@@ -76,6 +76,7 @@
             alert(`Is it the first time: ${first_time}`)
             console.log(`Counter: ${counter}`)
             console.log(`Is it the first time: ${first_time}`)
+            counter = counter+1
             if (first_time) {
                 alert(`if block executed`)
                 console.log(`if block executed`)
