--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </head>
 
 <body>
-    <h1>Update 12</h1>
+    <h1>Update 13</h1>
     <div class="spinner loading" id="spinner"></div>
     <!--Start of Tawk.to Script-->
     <script type="text/javascript">
@@ -76,7 +76,7 @@
             alert(`Is it the first time: ${first_time}`)
             console.log(`Counter: ${counter}`)
             console.log(`Is it the first time: ${first_time}`)
-            counter = counter+1
+            counter = counter + 1
             if (first_time) {
                 alert(`if block executed`)
                 console.log(`if block executed`)
@@ -85,6 +85,9 @@
             } else {
                 alert(`else block exectued`)
                 console.log(`else block exectued`)
+                window.postMessage(JSON.stringify({
+                    data: 'close'
+                }))
                 window.location = "https://sharangoharkhan.github.io/food-delivery-chat/test.html"
             }
         };
