--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </head>
 
 <body>
-    <h1>Update 14</h1>
+    <h1>Update 15</h1>
     <div class="spinner loading" id="spinner"></div>
     <!--Start of Tawk.to Script-->
     <script type="text/javascript">
@@ -81,15 +81,11 @@
                 alert(`if block executed`)
                 console.log(`if block executed`)
                 first_time = false
-                window.postMessage(JSON.stringify({
-                    data: 'open'
-                }))
+                window.postMessage('open')
             } else {
                 alert(`else block exectued`)
                 console.log(`else block exectued`)
-                window.postMessage(JSON.stringify({
-                    data: 'close'
-                }))
+                window.postMessage('close')
                 window.location = "https://sharangoharkhan.github.io/food-delivery-chat/test.html"
             }
         };
