--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </head>
 
 <body>
-    <h1>Update 15</h1>
+    <h1>Update 16</h1>
     <div class="spinner loading" id="spinner"></div>
     <!--Start of Tawk.to Script-->
     <script type="text/javascript">
@@ -81,12 +81,12 @@
                 alert(`if block executed`)
                 console.log(`if block executed`)
                 first_time = false
-                window.postMessage('open')
+                // window.postMessage('open')
             } else {
                 alert(`else block exectued`)
                 console.log(`else block exectued`)
-                window.postMessage('close')
-                window.location = "https://sharangoharkhan.github.io/food-delivery-chat/test.html"
+                // window.postMessage('close')
+                window.location = "https://enatega.com/"
             }
         };
     </script>
