changed spinner color

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             left: 50%;
             border-width: 8px;
             border-style: solid;
-            border-color: #ff8852 #ccc #ccc;
+            border-color: #d83765 #ccc #ccc;
             border-radius: 100%;
             animation: rotation .7s infinite linear;
         }
